The output is formatted. Code splitted in several files.

--- a/cmd/Makefile
+++ b/cmd/Makefile
@@ -11,7 +11,10 @@ include $(GOROOT)/src/Make.inc
 
 TARG=goheader
 GOFILES=\
+	c.go\
+	format.go\
 	goheader.go\
+	util.go\
 
 include $(GOROOT)/src/Make.cmd
 
